--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SUERTE CABA | PAD</title>
+    <title>CABA PRESTIGE | PAD</title>
     <link rel="icon" href="./img/logo.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
