--- a/index.html
+++ b/index.html
@@ -101,11 +101,23 @@
       </div>
 
       <div class="pad-container">
+        <button class="pad-button" id="premioEnviado2">PREMIO ENVIADO II</button>
+      </div>
+
+      <div class="pad-container">
+        <button class="pad-button" id="recomendar">RECOMENDAR</button>
+      </div>
+
+      <div class="pad-container">
         <button class="pad-button" id="contraseña">MANTENIMIENTO</button>
       </div>
 
       <div class="pad-container">
         <button class="pad-button" id="noIngreso">NO INGRESO</button>
+      </div>
+
+      <div class="pad-container">
+        <button class="pad-button" id="compartirComp">COMPARTIR COMPROBANTE</button>
       </div>
 
       <div class="pad-container">
@@ -123,15 +135,19 @@
       </div>
 
       <div class="pad-container">
-        <button class="pad-button" id="cbuEquivocado">SISTEMA PAGOS</button>
+        <button class="pad-button" id="cbuEquivocado">CBU EQUIVOCADO</button>
       </div>
 
       <div class="pad-container">
-        <button class="pad-button" id="ordenLlegada">ORDEN DE LLEGADA</button>
+        <button class="pad-button" id="ordenLlegada">SISTEMA DE PAGOS</button>
       </div>
 
       <div class="pad-container">
         <button class="pad-button" id="demorasCargas">DEMORAS MERCADO</button>
+      </div>
+
+      <div class="pad-container">
+        <button class="pad-button" id="bonificacion">BONIFICACION</button>
       </div>
     </div>
     <script src="main.js"></script>
